--- a/NetCoreCashRegister/NetCoreCashRegister.csproj
+++ b/NetCoreCashRegister/NetCoreCashRegister.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <StartupObject>NetFrameworkCashRegister.Program</StartupObject>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject></StartupObject>
+    <ApplicationIcon />
   </PropertyGroup>
 
 </Project>
